# gemini3hackathon

./: .env.example  README.md  pyproject.toml
jarvis/: config.py  main.py
jarvis/layer1/: audio_capture.py  screen_capture.py  wake_word.py
jarvis/layer2/: audio_playback.py  context_inject.py  live_session.py
jarvis/layer3/: task_executor.py  tools.py
jarvis/utils/: audio_utils.py  buffer.py  observe.py
